// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code && selectedType === code 1`] = `
<div
  className="card_link  layout-column flex-none selected"
  onClick={[Function]}
>
  <div
    className="card_img flex-85"
    style={
      Object {
        "backgroundImage": "url(FOO_IMAGE)",
        "backgroundSize": "contain",
      }
    }
  />
  <div
    className="card_action flex-15 layout-row layout-align-space-between-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center"
    >
      <p
        className="flex-none"
      >
        FOO_TEXT
         
      </p>
    </div>
    <div
      className="flex-none layout-row layout-align-center-center"
    >
      <i
        className="flex-none fa fa-check"
        style={
          Object {
            "background": "-webkit-linear-gradient(left, #333,#fafafa)",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`props.theme is falsy 1`] = `
<div
  className="card_link  layout-column flex-none unselected"
  onClick={[Function]}
>
  <div
    className="card_img flex-85"
    style={
      Object {
        "backgroundImage": "url(FOO_IMAGE)",
        "backgroundSize": "contain",
      }
    }
  />
  <div
    className="card_action flex-15 layout-row layout-align-space-between-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center"
    >
      <p
        className="flex-none"
      >
        FOO_TEXT
         
      </p>
    </div>
    <div
      className="flex-none layout-row layout-align-center-center"
    />
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="card_link  layout-column flex-none unselected"
  onClick={[Function]}
>
  <div
    className="card_img flex-85"
    style={
      Object {
        "backgroundImage": "url(FOO_IMAGE)",
        "backgroundSize": "contain",
      }
    }
  />
  <div
    className="card_action flex-15 layout-row layout-align-space-between-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center"
    >
      <p
        className="flex-none"
      >
        FOO_TEXT
         
      </p>
    </div>
    <div
      className="flex-none layout-row layout-align-center-center"
    />
  </div>
</div>
`;

exports[`state.redirect is true 1`] = `
<Redirect
  push={true}
  to="FOO_PATH"
/>
`;
